# signet-research

./: .gitignore  .gitmodules  CLAUDE.md  NOTES.txt  README.md  go.mod  go.sum  network_test.go
.claude/: agent-launcher.md  settings.json
.claude-library/: REGISTRY.json
contracts/: .gitignore  foundry.toml
devnet/: README.md  start.sh
docs/: DESIGN+IMPL.md  DESIGN-BARRETENBERG-WASM-GO.md  DESIGN-IMPL-AUTH.md  DESIGN-IMPL.md  DESIGN-KMS.md  DESIGN-MULTI-CURVE.md  DESIGN-NEAR-KEY-DERIVATION.md  DESIGN-RESHARE-CLUSTER-SPEC.md  DESIGN-RESHARE.md  DESIGN-SCOPED-SUBKEYS.md  DESIGN-ZK-AUTH.md  FROST-IMPLEMENTATION-COMPARISON.md  FROST-INTEGRATION-TESTING.md  FROST-MIGRATION-ANALYSIS.md  FROST-RESHARE-APPROACHES.md  KMS-INTEGRATION.md  LSS-ANALYSIS.md  LSS-SIGNING-FIXES.md  PERFORMANCE-ANALYSIS-OLD.md  PERFORMANCE-ANALYSIS.md  PRODUCTION-TODOS.md  SECURITY-ANALYSIS-OLD.md  TEMP-LIBP2P-LINUX.md  TEST-HARNESS.md  TODO-RESHARE-ACCEPTANCE.md  ZK-NEW-BUILD.md
kms-frost/: Cargo.toml
kms-frost/src/: curve.rs  ecdsa_session.rs  main.rs  params.rs  reshare.rs  reshare_session.rs  robust_ecdsa_spike.rs  service.rs  session.rs  storage.rs  types.rs
kms-tss/: Cargo.toml  build.rs
lss/: config.go  curve.go  keygen.go  lss_test.go  message.go  party.go  polynomial.go  reshare.go  session.go  sign.go  sign_ecdsa.go
network/: discovery.go  host.go  identity.go  loop.go  mux.go  session.go
node/: auth.go  chain.go  config.go  coord.go  curve.go  debug.go  delegate.go  key_version_store.go  keymanager.go  keystore.go  local_keymanager.go  node.go  remote_keymanager.go  scope.go  (+9 more)
(+426 files in other folders)
