[package]
name = "kms-frost"
version = "0.1.0"
edition = "2024"

[dependencies]
ciborium = "0.2"
frost-core = "2.2"
frost-ed25519 = "2.2"
frost-secp256k1 = "2.2"
hex = "0.4"
k256 = { version = "0.13", features = ["arithmetic"] }
prost = "0.13"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sled = "0.34"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "sync"] }
tokio-stream = "0.1"
tonic = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
vsss-rs = { version = "5", default-features = false, features = ["std"] }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tonic-build = "0.13"
